@@ -832,6 +832,7 @@ Terry Reedy
 Gareth Rees
 Steve Reeves
 Lennart Regebro
+Federico Reghenzani
 Ofir Reichenberg
 Sean Reifschneider
 Michael P. Reilly
